@@ -82,6 +82,12 @@
 		<para>Clients can find information about the broker by subscribing to topics in the $SYS hierarchy as follows. Topics marked as static are only sent once per client on subscription. Topics marked dynamic are updated every <option>sys_interval</option> seconds.</para>
 		<variablelist>
 			<varlistentry>
+				<term><option>$SYS/broker/heap/current size</option></term>
+				<listitem>
+					<para>The current size of the heap memory in use by mosquitto. Dynamic.</para>
+				</listitem>
+			</varlistentry>
+			<varlistentry>
 				<term><option>$SYS/broker/version</option></term>
 				<listitem>
 					<para>The version of the broker. Static.</para>
